2004-10-02  Paolo Maggi  <paolo@gnome.org>

	* gedit-file.[ch] (gedit_file_close): returns TRUE if the file has been
	really closed

	* gedit-mdi-child.c (gedit_mdi_child_tab_close_clicked): If a view is closed 
	while another one is active, re-activate the previous active view (fixes
	bug #149811: after closing a document jump to document which has been 
	open before)

2004-10-02  Paolo Borelli  <pborelli@katamail.com>

	* gedit-file.c: don't interpret escaped sequences in a filename
	as markup.

2004-10-02  Paolo Borelli  <pborelli@katamail.com>

	* gedit-file.c:
	* gedit-file-selector-util.c:
	* gedit-mdi.c:
	* gedit-mdi-child.c:
	* gedit-print.c:
	* gedit-utils.c: use a local copy of str_middle_truncate.

2004-10-02  Paolo Maggi  <paolo@gnome.org>

	* gedit-mdi.c (gedit_mdi_drag_data_received_handler): always opens the 
	dropped files in the right target gedit window (fixes bug #150485: 
	Dragging and dropping doesn't choose the right window)

2004-09-30  Paolo Borelli  <pborelli@katamail.com>

	* gedit-document.c:
	* gedit-file.c:
	* gedit-utils.c: trivial s/eel/gnome_vfs for a couple of func
	that have been copied verbatim to gnome-vfs

2004-09-28  Paolo Borelli  <pborelli@katamail.com>

	* recent-files/egg-recent-model.c: sync to latest
	libegg.

2004-09-27  Paolo Borelli  <pborelli@katamail.com>

	* recent-files/egg-recent-util.c: sync to latest
	libegg.
	* gedit-utils.c: do not crash when gnome_vfs_uri_get_host_name
	return NULL;

2004-09-16  Paolo Borelli  <pborelli@katamail.com>

	* recent-files/egg-recent-model.c: sync to latest
	libegg.

2004-08-17  Mark McLoughlin  <mark@skynet.ie>

	* recent-files/egg-recent-item.c,
	  recent-files/egg-recent-view-gtk.c: sync to latest
	libegg.

2004-08-07  Paolo Borelli  <pborelli@katamail.com>

	* gedit-print.c: make the dialog resizable (Jody Golberg, #149726).

2004-08-07  Paolo Borelli  <pborelli@katamail.com>

	* recent-files/* : update from libegg.

2004-08-07  Paolo Borelli  <pborelli@katamail.com>
